# ldml-api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Rocket.toml  ldml-api.json  tagset_keys.list
.github/workflows/: cleanup.yml  dockerimage.yml
kubernetes/local/: kustomization.yaml
kubernetes/prod/: deployment.yaml  fleet.yaml  ingress.yaml  kustomization.yaml  rbac.yaml  service.yaml  storage.yaml
kubernetes/prod/config/: deploy.sh  hooks.yaml
kubernetes/prod/kustomize/: deployment.yaml  ingress.yaml  kustomization.yaml  storage.yaml
kubernetes/prod/kustomize/config/: hooks.yaml
langtags/: Cargo.toml
langtags/src/: json.rs  langtags.rs  lib.rs  tagset.rs  text.rs
langtags/tests/: integration.rs  langtags.txt
language-tag/: Cargo.toml
language-tag/src/: from_str.rs  lib.rs  parser.rs  tag.rs  test.rs
language-tag/tests/: integration.rs
src/: config.rs  etag.rs  index.html  langtags.rs  ldml.rs  lib.rs  main.rs  old-main.rs  tag.rs  toggle.rs  unique_id.rs
test/: en_US.xml  langtags.txt
test/short/: langtags.json
tests/: integration.rs  palaso-tag.list
tests/short/: langtags.json  langtags.txt
