[workspace]
members = [
    "language-tag",
    "langtags",
]

[package]
name = "ldml-api"
description = "LDML REST API endpoint."
keywords = ["ldml", "http", "rest", "web"]
license = "GPLv3"
readme = "README.md"
version = "0.2.0"
authors = ["Tim Eves <tim_eves@sil.org>"]
edition = "2021"

[dev-dependencies]
hyper = { version = "0.14" }
tower = "0.4"

[dependencies]
axum = { version = "0.6", features = ["headers", "http2"]}
clap = { version = "4.5", features = ["derive"] }
langtags = { version = "0", path = "./langtags" }
language-tag = { version = "0", path = "./language-tag" }
libxml = { version = "0.3"}
mime_guess = "2.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.0"
serde_urlencoded = "0.7"
tokio = { version = "1.39", features= ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
tower-http = { version = "0.4", features = ["compression-deflate", "compression-gzip", "compression-zstd","fs", "trace"] }