[workspace]
members = [
    "language-tag",
    "langtags",
]

[workspace.dependencies]
language-tag = { version = "0", path = "./language-tag", features = ["serde", "compact"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package]
name = "ldml-api"
description = "LDML REST API endpoint."
keywords = ["ldml", "http", "rest", "web"]
license = "GPLv3"
readme = "README.md"
version = "0.3.0"
authors = ["Tim Eves <tim_eves@sil.org>"]
edition = "2021"

[dev-dependencies]
hyper = { version = "1.0" }
tower = { version = "0.5", features = ["util"]}

[dependencies]
axum = { version = "0.8", features = ["http2"]}
axum-extra = { version = "0.10", features = ["typed-header"]}
clap = { version = "4.5", features = ["derive"] }
langtags = { version = "0", path = "./langtags", features = ["compact"] }
language-tag = { workspace = true }
libxml = { version = "0.3"}
mime_guess = "2.0"
rand = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = "0.7"
serde_with = "3.11"
tokio = { version = "1.39", features= ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["compression-deflate", "compression-gzip", "compression-zstd","fs", "trace"] }