[package]
name = "langtags"
version = "0.1.0"
description = "Language Tag type"
keywords = ["langtag", "web", "language", "metadata"]
license = "GPLv3"
readme = "README.md"
authors = ["Tim Eves <tim_eves@sil.org>"]
edition = "2021"

[lib]

[dependencies]
language-tag = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
