[package]
name = "langtags"
version = "0.1.0"
description = "Language Tag type"
keywords = ["langtag", "web", "language", "metadata"]
license = "GPLv3"
readme = "README.md"
authors = ["Tim Eves <tim_eves@sil.org>"]
edition = "2021"

[lib]

[features]
compact = ["dep:compact_str", "language-tag/compact"]

[dependencies]
compact_str = { version = "0.8", features = ["serde"], optional = true }
language-tag = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
