[package]
name = "language-tag"
description = "Language Tag type"
keywords = ["langtag", "web", "language", "metadata"]
license = "GPLv3"
readme = "README.md"
version = "0.7.1"
authors = ["Tim Eves <tim_eves@sil.org>"]
edition = "2021"

[lib]

[features]
serde = ["dep:serde_with", "compact_str?/serde"]
compact = ["dep:compact_str"]

[dev-dependencies]
serde_json = { workspace = true }

[dependencies]
nom = "8"
serde_with = { version = "3.11", optional = true }
compact_str = { version = "0.9", optional = true }
